# scd-ml

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements-mask.txt  requirements.txt
notebooks/: 00_eda_isci_archive.ipynb  01_eda_ham10000.ipynb  01_train_mask_rcnn.ipynb  02_apply_segmentation.ipynb  03_eda_udem_skin_cancer.html  03_features_extraction.ipynb  05_eda_udem_skin_cancer.ipynb  explore_data.ipynb  mask_rcnn.ipynb  test_dinov3.ipynb
results/: test_metrics_maskrcnn_ham10000.csv  training_history_maskrcnn_ham10000.csv
results/mask_rcnn/evaluation/: test_mean_metrics_maskrcnn_ham10000.csv  test_metrics_maskrcnn_ham10000.csv
results/mask_rcnn/training/: training_history_maskrcnn_ham10000.csv
scripts/: prune_isic_images.py  sync_features.sh  train_mask_rcnn.py
src/: paths.py  viz.py
src/mask/: coco_annotations.py  coco_eval.py  coco_utils.py  engine.py  mask_evaluation.py
